anpasung für verschidene Auflösung (responsive.css)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
 </head>
 <body>
@@ -17,6 +18,9 @@
                 <div class="n_info">
                     <h4>Welcome to my world</h4>
                     <h1>Hi, Mein Name ist <span>Viktor Galaktionov</span>.<br>Ich bin ein Auszubildender Fachinformaticker.</h1>
+                    <div class="nav_foto_smart">
+                        <img src="img/bewerbungsfoto4.png" alt=""> 
+                    </div>
                     <p class="beruf anime">Fachinformatiker Anwendungsentwicklung</p>
                     <p class="nav_text anime">mit Schwerpunkt auf HTML, CSS, JavaScript, PHP, C# und relationalen Datenbanken (z. B. MySQL). 
                         Zudem beherrsche ich Versionskontrolle mit Git in Verbindung mit GitHub.
