--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="n_info">
                     <h4>Welcome to my world</h4>
                     <h1>Hi, Mein Name ist <span>Viktor Galaktionov</span>.<br>Ich bin ein Auszubildender Fachinformaticker.</h1>
-                    <div class="nav_foto_smart">
+                    <div class="nav_foto_smart anime">
                         <img src="img/bewerbungsfoto4.png" alt=""> 
                     </div>
                     <p class="beruf anime">Fachinformatiker Anwendungsentwicklung</p>
@@ -55,8 +55,7 @@
 
             <h2 class="header_title">
                 Digitale <span style="color:#ff00008c;">Zukunft</span> gestalten: Mit Kompetenz, Technologie und Innovation
-            </h2>    
-        
+            </h2> 
             <div class="header_info">
                 <div class="header_bloks anime">
                     <img src="img/logos/star.png" alt="">
@@ -81,7 +80,6 @@
         <div class="wrapper">
             <h2 class="footer_title">Mein <span>Lebenslauf</span></h2>
             <div class="footer_kontent">             
-
                 <div class="quality">
                     <h3 class="title">Ausbildung</h3>
                     <div class="footer_infobox anime">
